# piwiz

./: .gitignore  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  hy.po  meson.build  piwiz.pc.in  zh_CN.po
data/: 10-piwiz-timesync.rules  10-piwiz.rules  Makefile.am  Makefile.in  cancel-rename  hdmi-audio-select  meson.build  mvuser  org.freedesktop.packagekit.pkla  piwiz.desktop  piwiz.desktop.in  piwiz.ui  rename-user  rewiz
debian/: changelog  control  copyright  piwiz-hs.install  piwiz-hs.postrm  piwiz-hs.preinst  piwiz.install  piwiz.preinst
po/: POTFILES  POTFILES.in  en_GB.po  es_PE.po  hu.po  it.po  ko.po  pt_BR.po  sk.po
src/: Makefile.am  Makefile.in  hdmi-audio-select  meson.build  piwiz.c
src/dhcpcd-gtk/: dhcpcd-gtk.h  main.c  wpa.c
src/libdhcpcd/: wpa.c
